New functions:
cla, clf, gca, gcf, get,
global, set, isglobal, polar

Updated functions:
blanks, checkForUpdates, patch, path, substring

---- HISTORY ------------------------------------------------------------------
2007/09/xx 
stefan + 

2007/09/xx 
stefan * toolbox/deprecated added some documentation 
stefan * toolbox/finance added some documentation 

2007/09/08 
stefan * toolbox/control/* added some minor documentation details 
stefan * handling of "return" command moved to function token
stefan * FunctionToken.java
stefan - _return.java
stefan - return.m
stefan # is_abcd.m bugfix for non-square matrices
stefan * UInt8NumberToken added "subtract"

2007/08/25 
stefan * worked a lot on installers and distribution generator
stefan * new directory installer/ 
stefan * new directory upload/ 
stefan * build.xml, build.properties changes due to new distribution

2007/08/19 
stefan + committed lots of files to new repository

2007/08/18 
stefan + switched development over to a subversion repository

2007/08/14 
jason * SwingGUI.java added requestFocus after starting 
jason # num2str.java bugfix
jason # AddPath.java bugfix
jason # rehash.java bugfix
jason + testGlobal.java new tests
jason * testNum2Str.java new tests
jason * Functions/* corrections and add on to rehashing of functions

2007/08/13 
jason + major update to the swing user interface

2007/07/28 
stefan * ui/questdlg.java modal dialog with choice

2007/07/08 
stefan + Graphics/CartesianAxesObject.java extends AxesObject.java for
         better separation of various axes: polar, cartesian, 3D,... 

2007/07/08 
stefan * Functions/Graphics/Graph2d/polar.java when called as polar([3,5,3])add an x-axis 
         like [1,2,3] instead of [0,1,2]
stefan * Functions/Graphics/Graph2d/plot.java when called as plot([3,5,3])add an x-axis 
         like [1,2,3] instead of [0,1,2]
stefan * Graphics/LineObject.java enhancements for polar plots
stefan * Graphics/PolarAxesObject.java enhancements for polar plots
